--- a/config/bf20_mill/bf20_mill.ini
+++ b/config/bf20_mill/bf20_mill.ini
@@ -71,7 +71,7 @@ PROGRAM_EXTENSION = .nc,.txt,.tap ; .ngc is always accepted
 
 [RS274NGC]
 PARAMETER_FILE = sim.var
-SUBROUTINE_PATH = ~/dev/bf20_mill/config/bf20_mill/subroutines/
+SUBROUTINE_PATH = subroutines/
 RS274NGC_STARTUP_CODE = F10 S300 G64 P0.001
 FEATURES=12
 
@@ -89,9 +89,9 @@ REMAP=M6   modalgroup=6  prolog=change_prolog   ngc=test_change  epilog=change_e
 [PYTHON]
 # where to find Python code
 # code specific for this configuration
-PATH_PREPEND= /home/py3dev/dev/bf20_mill/config/bf20_mill/python/
-PATH_APPEND= /home/py3dev/dev/bf20_mill/config/bf20_mill/python/python-stdglue
-TOPLEVEL= /home/py3dev/dev/bf20_mill/config/bf20_mill/python/toplevel.py
+PATH_PREPEND= ./python/
+PATH_APPEND= ./python/python-stdglue
+TOPLEVEL= ./python/toplevel.py
 
 # the higher the more verbose tracing of the Python plugin
 LOG_LEVEL = 0
