change the username to make the scritp replace them

--- a/dev_launchers/Designer for BF20 Mill.desktop
+++ b/dev_launchers/Designer for BF20 Mill.desktop
@@ -3,8 +3,8 @@ Version=1.0
 Type=Application
 Name=Designer for BF20 Mill
 Comment=QTDesigner for BF20 Mill
-Exec=/home/py3dev/dev/bf20_mill/dev_launchers/bf20_mill_designer.sh
+Exec=/home/username/dev/bf20_mill/dev_launchers/bf20_mill_designer.sh
 Icon=qtpyvcp
-Path=/home/py3dev/dev
+Path=/home/username/dev/bf20_mill/dev_launchers
 Terminal=false
 StartupNotify=false
