--- a/dev_launchers/BF20 Mill.desktop
+++ b/dev_launchers/BF20 Mill.desktop
@@ -3,8 +3,8 @@ Version=1.0
 Type=Application
 Name=BF20 Mill
 Comment=BF20 Mill CNC Control Interface
-Exec=/home/py3dev/dev/bf20_mill/dev_launchers/bf20_mill_launcher.sh
+Exec=/home/username/dev/bf20_mill/dev_launchers/bf20_mill_launcher.sh
 Icon=probe_basic_mill
-Path=/home/py3dev/dev
+Path=/home/username/dev/bf20_mill/dev_launchers
 Terminal=false
 StartupNotify=false
