--- a/dev_launchers/BF20 Mill.desktop
+++ b/dev_launchers/BF20 Mill.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=BF20 Mill
 Comment=BF20 Mill CNC Control Interface
 Exec=/home/username/dev/bf20_mill/dev_launchers/bf20_mill_launcher.sh
-Icon=probe_basic_mill
+Icon=bf20_mill_icon
 Path=/home/username/dev/bf20_mill/dev_launchers
 Terminal=false
 StartupNotify=false
