--- a/dev_launchers/Designer for BF20 Mill.desktop
+++ b/dev_launchers/Designer for BF20 Mill.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Designer for BF20 Mill
 Comment=QTDesigner for BF20 Mill
 Exec=/home/username/dev/bf20_mill/dev_launchers/bf20_mill_designer.sh
-Icon=qtpyvcp
+Icon=qtpyvcp2
 Path=/home/username/dev/bf20_mill/dev_launchers
 Terminal=false
 StartupNotify=false
