--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ packages = [
 	"bf20_mill",
 	"bf20_mill.fonts",
 	"bf20_mill.images",
-	"bf20_mill.widgets",
+	"bf20_mill_widgets",
+	"bf20_mill_widgets.conversational",
 ]
 
 [project.gui-scripts]
@@ -34,7 +35,7 @@ bf20_mill = "bf20_mill:main"
 bf20_mill = "bf20_mill"
 
 [project.entry-points."qtpyvcp.widgets"]
-"bf20_mill_widgets" = "bf20_mill.widgets"
+"bf20_mill_widgets" = "bf20_mill_widgets"
 
 [tool.versioneer]
 VCS = "git"
